--- a/app_management4.html
+++ b/app_management4.html
@@ -185,6 +185,7 @@
                     <h6 class="fw-bold">Input Kilat & OCR</h6>
                     <p class="small text-muted mb-0">Integrasi kamera pintar memangkas waktu input. Pindai struk, dan sistem akan membaca nominal secara otomatis.</p>
                 </div>
+
                 <div class="feature-card">
                     <div class="feature-icon"><i class="fas fa-palette"></i></div>
                     <h6 class="fw-bold">Tema Adaptif (Alarm Visual)</h6>
@@ -194,6 +195,12 @@
                         <span class="fw-bold" style="color: #ffc107;">Kuning</span> (Waspada), hingga 
                         <span class="fw-bold" style="color: #dc3545;">Merah</span> (Bahaya).
                     </p>
+                </div>
+
+                <div class="feature-card">
+                    <div class="feature-icon"><i class="fas fa-brain"></i></div>
+                    <h6 class="fw-bold">Perencanaan Cerdas</h6>
+                    <p class="small text-muted mb-0">Visualisasikan target pembelian dengan kalender prediktif. Kami menghitung kapan impian Anda terwujud berdasarkan kemampuan menabung harian.</p>
                 </div>
             </div>
 
